CSS tweaks to circlegame.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,6 @@
-<!-- This is just the default layout for the Cayman theme from https://github.com/pages-themes/cayman/blob/master/_layouts/default.html -->
+<!-- This is just the default layout for the Cayman theme from https://github.com/pages-themes/cayman/blob/master/_layouts/default.html 
+	 minus the "Skip to the content" part
+  -->
 
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
@@ -22,8 +24,6 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
   <body>
-    <a id="skip-to-content" href="#content">Skip to the content.</a>
-
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
