--- a/_layouts/unity_webplayer.html
+++ b/_layouts/unity_webplayer.html
@@ -25,8 +25,8 @@ gameName: Temp
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
+    <link rel="shortcut icon" href= {{ page.gameName }} + "TemplateData/favicon.ico">
+    <link rel="stylesheet" href= {{ page.gameName }} + "TemplateData/style.css">
     <script src= {{ page.gameName }} + "/TemplateData/UnityProgress.js"></script>
     <script src= {{ page.gameName }} + "/Build/UnityLoader.js"></script>
     <script>
