--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,4 @@
-<!-- This is just the default layout for the Cayman theme from https://github.com/pages-themes/cayman/blob/master/_layouts/default.html 
-	 minus the "Skip to the content" part
+<!-- Modified from the Cayman theme: https://github.com/pages-themes/cayman/blob/master/_layouts/default.html 
   -->
 
 <!DOCTYPE html>
@@ -26,7 +25,10 @@
   <body>
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-      <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+      <h2 class="project-tagline">
+        <!-- NAVBAR HERE -->
+        <a href="index.md">Home</a> | <a href="games.md">Games</a>
+      </h2>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
