--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">
         <!-- NAVBAR HERE -->
-        <a href="index.md">Home</a> | <a href="games.md">Games</a>
+        <a href="index.html">Home</a> | <a href="games.html">Games</a>
       </h2>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
