--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -178,8 +178,11 @@ a {
       font-size: 1rem;
     }
 
-    a {
+    a:link {
         color: lightcyan;
+    }
+    a:visited {
+        color: turquoise;
     }
   }
 
