Navbar now uses absolute paths

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
 <h2 class="project-navbar">
     <!-- NAVBAR HERE -->
-    <a class="project-navbar" href="index.html">Home</a> | <a class="project-navbar" href="games.html">Games</a>
+    <a class="project-navbar" href="/index.html">Home</a> | <a class="project-navbar" href="/games.html">Games</a>
 </h2>
