--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,11 @@
-<h2 class="project-navbar">
-    <!-- NAVBAR HERE -->
-    <a class="project-navbar" href="/index.html">Home</a> | <a class="project-navbar" href="/games.html">Games</a>
-</h2>
+<div class="w3-theme-d3 w3-bar w3-card" id="navBar">
+    <a class="w3-theme w3-bar-item w3-button" id="btn-home" href="/index.html">
+        Home
+    </a>
+    <a class="w3-theme-d3 w3-bar-item w3-button" id="btn-skills" href="/games.html">
+        Games
+    </a>
+    <a class="w3-theme-d3 w3-bar-item w3-button" id="btn-resume" href="/resume.html">
+        Resume
+    </a>
+</div>
