--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <div class="w3-theme-d3 w3-bar w3-card" id="navBar">
-    <a class="w3-theme w3-bar-item w3-button" id="btn-home" href="/index.html">
+    <a class="w3-theme-d3 w3-bar-item w3-button" id="btn-home" href="/index.html">
         Home
     </a>
     <a class="w3-theme-d3 w3-bar-item w3-button" id="btn-skills" href="/games.html">
