--- a/_layouts/unity_webplayer.html
+++ b/_layouts/unity_webplayer.html
@@ -44,10 +44,9 @@
     {% include navbar.html %}
 
     <main id="content" class="main-content" role="main">
-      {{ content }}
-	  
-	  <br>
-	  <p style="text-align: center"><a href="https://larry156.github.io">Return to Index.</p>
+      <iframe style="width:1024px; height: 768px; border:none;">
+        {{ content }}
+      </iframe>
 
       <footer class="site-footer">
         {% if site.github.is_project_page %}
