changed main navbar to fit in better

--- a/_layouts/unity_webplayer.html
+++ b/_layouts/unity_webplayer.html
@@ -1,4 +1,5 @@
 <!-- Modified from the default layout for the Cayman theme -->
+<!-- This should be considered deprecated -->
 
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
