--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<div class="w3-theme-d3 w3-bar w3-card" id="navBar">
+<div class="w3-theme-d3 w3-bar w3-card navbar" id="navBar">
     <a class="w3-theme-d3 w3-bar-item w3-button" id="btn-home" href="/index.html">
         Home
     </a>
