--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,6 +5,9 @@
     <a class="w3-theme-d3 w3-bar-item w3-button" id="btn-skills" href="/games.html">
         Games
     </a>
+    <a class="w3-theme-d3 w3-bar-item w3-button" id="btn-skills" href="/Textures/textures.html">
+        Textures
+    </a>
     <a class="w3-theme-d3 w3-bar-item w3-button" id="btn-resume" href="/resume.html">
         Resume
     </a>
