Modify colour scheme

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,9 @@
 ---
 ---
 
+// Theme overrides
+$section-headings-color: #4b55e0;
+
 @import "{{ site.theme }}";
 
 // Should probably be considered deprecated
@@ -61,18 +64,30 @@
 
 // Custom CSS
 .navbar {
-  background-color: #0f4779; 
-  background-image: linear-gradient(0deg, #094347, #0f4779);
+  background-color: #262770 !important; 
+  // background-image: linear-gradient(0deg, #092447, #0f4779);
 
   a:link {
-    background-color: #0f4779; 
-    background-image: linear-gradient(0deg, #094347, #0f4779);
+    background-color: #262770 !important; 
+    // background-image: linear-gradient(0deg, #092447, #0f4779);
   }
 
   a:hover {
-    background-color: #65a7e4; 
-    background-image: linear-gradient(0deg, #78c6cc, #65a7e4);
+    background-color: #4e50cf !important; 
+    color: #fff !important;
+    text-decoration: none;
+    // background-image: linear-gradient(0deg, #78c6cc, #65a7e4);
   }
+}
+
+.page-header.custom-header {
+  background-color: #2a5ab1;
+  background-image: linear-gradient(336deg, #2a5ab1 0%, #312b7e 100%);
+}
+
+.w3-button.round-button {
+  border-radius: 25px;
+  margin: 5px;
 }
 
 .unity-game {
