--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,14 +1,14 @@
 <div class="w3-theme-d3 w3-bar w3-card navbar" id="navBar">
-    <a class="w3-theme-d3 w3-bar-item w3-button" id="btn-home" href="/index.html">
+    <a class="w3-theme-d3 w3-bar-item w3-button round-button navbar" id="btn-home" href="/index.html">
         Home
     </a>
-    <a class="w3-theme-d3 w3-bar-item w3-button" id="btn-skills" href="/games.html">
+    <a class="w3-theme-d3 w3-bar-item w3-button round-button navbar" id="btn-skills" href="/games.html">
         Games
     </a>
-    <a class="w3-theme-d3 w3-bar-item w3-button" id="btn-skills" href="/Textures/textures.html">
+    <a class="w3-theme-d3 w3-bar-item w3-button round-button navbar" id="btn-skills" href="/Textures/textures.html">
         Textures
     </a>
-    <a class="w3-theme-d3 w3-bar-item w3-button" id="btn-resume" href="/resume.html">
+    <a class="w3-theme-d3 w3-bar-item w3-button round-button navbar" id="btn-resume" href="/resume.html">
         Resume
     </a>
 </div>
