Redesign of website, also added a new game: Lightrunner

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,13 +2,13 @@
     <a class="w3-theme-d3 w3-bar-item w3-button round-button navbar" id="btn-home" href="/index.html">
         Home
     </a>
-    <a class="w3-theme-d3 w3-bar-item w3-button round-button navbar" id="btn-skills" href="/games.html">
+    <a class="w3-theme-d3 w3-bar-item w3-button round-button navbar" id="btn-games" href="/games.html">
         Games
     </a>
-    <a class="w3-theme-d3 w3-bar-item w3-button round-button navbar" id="btn-skills" href="/textures.html">
-        Textures
+    <a class="w3-theme-d3 w3-bar-item w3-button round-button navbar" id="btn-projects" href="/projects.html">
+        Projects
     </a>
-    <a class="w3-theme-d3 w3-bar-item w3-button round-button navbar" id="btn-resume" href="/resume.html">
-        Resume
+    <a class="w3-theme-d3 w3-bar-item w3-button round-button navbar" id="btn-textures" href="/textures.html">
+        Textures
     </a>
 </div>
