--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,72 +8,125 @@ $section-headings-color: #4b55e0;
 
 // Should probably be considered deprecated
 .project-navbar {
-    margin-bottom: 2rem;
-    font-weight: normal;
-    opacity: 0.7;
-  
-    @include large {
-      font-size: 1.25rem;
-    }
-  
-    @include medium {
-      font-size: 1.15rem;
-    }
-  
-    @include small {
-      font-size: 1rem;
-    }
+  margin-bottom: 2rem;
+  font-weight: normal;
+  opacity: 0.7;
 
-    a:link {
-        color: skyblue;
-    }
-    a:visited {
-        color: turquoise;
-    }
-    a:hover {
-        color: white;
-    }
-    a:active {
-        color: lightcyan;
-    }
+  @include large {
+    font-size: 1.25rem;
+  }
+
+  @include medium {
+    font-size: 1.15rem;
+  }
+
+  @include small {
+    font-size: 1rem;
+  }
+
+  a:link {
+    color: skyblue;
+  }
+  a:visited {
+    color: turquoise;
+  }
+  a:hover {
+    color: white;
+  }
+  a:active {
+    color: lightcyan;
+  }
 }
 
 /* W3 Teal Theme */
-.w3-theme-l5 {color:#000 !important; background-color:#e9fffd !important}
-.w3-theme-l4 {color:#000 !important; background-color:#b7fff8 !important}
-.w3-theme-l3 {color:#000 !important; background-color:#6efff1 !important}
-.w3-theme-l2 {color:#000 !important; background-color:#26ffe9 !important}
-.w3-theme-l1 {color:#fff !important; background-color:#00dcc6 !important}
-.w3-theme-d1 {color:#fff !important; background-color:#008578 !important}
-.w3-theme-d2 {color:#fff !important; background-color:#00766a !important}
-.w3-theme-d3 {color:#fff !important; background-color:#00685d !important}
-.w3-theme-d4 {color:#fff !important; background-color:#005950 !important}
-.w3-theme-d5 {color:#fff !important; background-color:#004a43 !important}
+.w3-theme-l5 {
+  color: #000 !important;
+  background-color: #e9fffd !important;
+}
+.w3-theme-l4 {
+  color: #000 !important;
+  background-color: #b7fff8 !important;
+}
+.w3-theme-l3 {
+  color: #000 !important;
+  background-color: #6efff1 !important;
+}
+.w3-theme-l2 {
+  color: #000 !important;
+  background-color: #26ffe9 !important;
+}
+.w3-theme-l1 {
+  color: #fff !important;
+  background-color: #00dcc6 !important;
+}
+.w3-theme-d1 {
+  color: #fff !important;
+  background-color: #008578 !important;
+}
+.w3-theme-d2 {
+  color: #fff !important;
+  background-color: #00766a !important;
+}
+.w3-theme-d3 {
+  color: #fff !important;
+  background-color: #00685d !important;
+}
+.w3-theme-d4 {
+  color: #fff !important;
+  background-color: #005950 !important;
+}
+.w3-theme-d5 {
+  color: #fff !important;
+  background-color: #004a43 !important;
+}
 
-.w3-theme-light {color:#000 !important; background-color:#e9fffd !important}
-.w3-theme-dark {color:#fff !important; background-color:#004a43 !important}
-.w3-theme-action {color:#fff !important; background-color:#004a43 !important}
+.w3-theme-light {
+  color: #000 !important;
+  background-color: #e9fffd !important;
+}
+.w3-theme-dark {
+  color: #fff !important;
+  background-color: #004a43 !important;
+}
+.w3-theme-action {
+  color: #fff !important;
+  background-color: #004a43 !important;
+}
 
-.w3-theme {color:#fff !important; background-color:#009688 !important}
-.w3-text-theme {color:#009688 !important}
-.w3-border-theme {border-color:#009688 !important}
+.w3-theme {
+  color: #fff !important;
+  background-color: #009688 !important;
+}
+.w3-text-theme {
+  color: #009688 !important;
+}
+.w3-border-theme {
+  border-color: #009688 !important;
+}
 
-.w3-hover-theme:hover {color:#fff !important; background-color:#009688 !important}
-.w3-hover-text-theme:hover {color:#009688 !important}
-.w3-hover-border-theme:hover {border-color:#009688 !important}
+.w3-hover-theme:hover {
+  color: #fff !important;
+  background-color: #009688 !important;
+}
+.w3-hover-text-theme:hover {
+  color: #009688 !important;
+}
+.w3-hover-border-theme:hover {
+  border-color: #009688 !important;
+}
 
 // Custom CSS
 .navbar {
-  background-color: #262770 !important; 
+  background-color: #262770 !important;
   // background-image: linear-gradient(0deg, #092447, #0f4779);
 
   a:link {
-    background-color: #262770 !important; 
+    background-color: #262770 !important;
     // background-image: linear-gradient(0deg, #092447, #0f4779);
   }
 
   a:hover {
-    background-color: #4e50cf !important; 
+    background-color: #4e50cf !important;
     color: #fff !important;
     text-decoration: none;
     // background-image: linear-gradient(0deg, #78c6cc, #65a7e4);
@@ -98,6 +151,6 @@ $section-headings-color: #4b55e0;
 }
 
 .unity-container {
-  position: relative; 
+  position: relative;
   left: -15%;
 }
