--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,11 +21,12 @@ layout: default
 
 <h1>Related Posts</h1>
 
+{% assign seen_posts = 0 %}
 {% for post in site.related_posts %}
     {% unless post.tags contains "SiteIntroduction" %}
-        <!-- Necessary to limit posts shown properly due to excluding introductions -->
-        <!-- {% increment seen_posts %} -->
-        <div class="card">
+        <!-- Here this is just used to flag whether posts were seen -->
+        {% assign seen_posts = seen_posts | plus: 1 %}
+        <div class="small-card">
             <h3><a href="{{ post.url }}">{{ post.postName }}</a></h2>
             {{ post.excerpt }}
             <b>{{post.date | date_to_string: "ordinal" }}</b>
