--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -162,3 +162,12 @@ $section-headings-color: #4b55e0;
   margin-top: 24px;
   box-shadow: 4px 4px 16px -8px;
 }
+
+.small-card {
+  // border: 1px solid white;
+  border-radius: 32px;
+  padding: 24px;
+  margin-top: 4px;
+  box-shadow: 4px 4px 16px -8px;
+  transform: scale(0.9);
+}
